<resources>
    <string name="app_name">Final Dilution</string>
    <string name="action_rename">Rename</string>
    <string name="action_clone">Clone</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_create">Create</string>
    <string name="beakerDescription">beaker</string>
    <string name="volumeText">Total volume:</string>
    <string name="title_activity_startup">Select solution</string>
    <string name="title_activity_prepare">Prepare solution</string>
    <string name="title_activity_compound">Add compound</string>
    <string name="add_new_solution_button_text">"+    NEW"</string>
    <string name="FromEditToPrepButtonText">DONE</string>
    <string name="fromPrepToEditButtonText">BACK</string>
    <string name="buttonNewCompound">+</string>
    <string name="button_search_description">Search</string>
    <string name="mililiters">ml</string>
    <string name="compound_list">Compound List</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="application_name">Final Dilution</string>
    <string name="application_name_first_word">Final</string>
    <string name="application_name_second_word">Dilution</string>
    <string name="professore">Professore</string>
    <string name="mass_in_brackets">"[%s]"</string>
    <string name="title_add_new_compound">Add new compound</string>
    <string name="trivial_name">Trivial name (optional)</string>
    <string name="molar_mass">Molar mass (for molar concentrations)</string>
    <string name="density">Density (for molar concentrations of liquids)</string>
    <string name="iupac_name">Name</string>
    <string name="state_of_matter">State of matter</string>
    <string name="state_of_matter_solid">Solid</string>
    <string name="state_of_matter_liquid">Liquid</string>
    <string name="chemical_formula">Chemical formula (optional)</string>
    <string name="navigation_back">back</string>
    <string name="navigation_proceed">Done</string>
    <string name="advanced_options">Advanced options</string>
    <string name="dilution_from_stock">Make it dilution from stock…</string>
    <string name="exit_search_description">Exit search</string>
    <string name="desired_concentration">Desired concentration</string>
    <string name="stock_concentration">Stock concentration</string>
    <string name="percent">%</string>
    <string name="mol">M</string>
    <string name="millimol">mM</string>
    <string name="mg_ml">mg/ml</string>
    <string name="nx">nX</string>
    <string name="well_done">Well done</string>
    <string name="add_density_for_volume">Add density to obtain result in ml</string>
    <string name="no_molar_mass_entered">No molar mass entered.</string>
    <string name="no_density_entered">No density entered.</string>
    <string name="fill_up_to_quantity">Fill up to %s</string>
    <string name="delete_solution">Delete solution: %s ?</string>
    <string name="delete_compound">Delete compound: %s ?</string>
    <string name="delete_compound_affected_solutions">Warning! The following solutions will be
        affected: %s</string>
    <string name="edit_compound">Edit %s</string>
    <string name="enter_new_solution_name">Enter new solution name:</string>
    <string name="clone_solution">Clone %s:</string>
    <string name="rename_solution">Rename %s:</string>
</resources>
