<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circle_gradient"
    tools:context=".peripherals.view.SplashActivity">

    <TextView
        android:id="@+id/title_1"
        style="@style/FinalDilutionMem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:includeFontPadding="false"
        android:text="@string/application_name_first_word"
        app:layout_constraintBottom_toTopOf="@+id/title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/title_2"
        style="@style/FinalDilutionMem"
        android:layout_width="0dp"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:includeFontPadding="false"
        android:text="@string/application_name_second_word"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="50dp"
        android:background="@color/transparent"
        android:contentDescription="@string/professore"
        android:src="@drawable/professore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>