<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/compounds_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff"
    android:clickable="true"
    android:elevation="@dimen/bottom_sheet_elevation"
    android:focusable="true"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_collapsed_height"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:layout_constraintHeight_percent="80">

    <com.labwhisper.biotech.finaldilution.compound.view.AddComponentButtonView
        android:id="@+id/compoundsListHeader"
        style="@style/FinalDilutionH1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_header_height"
        android:layout_marginTop="@dimen/bottom_sheet_top_margin"
        android:text="@string/buttonNewCompound"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/compoundsListTitle"
        style="@style/FinalDilutionH1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/grey1"
        android:gravity="center"
        android:text="@string/compound_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compoundsListHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/compoundsListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey1"
        android:fadingEdgeLength="40dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compoundsListTitle" />

    <ImageButton
        android:id="@+id/new_compound_button"
        style="@style/FinalDilutionButton"
        android:layout_marginStart="@dimen/grid_margin_side"
        android:layout_marginBottom="@dimen/grid_margin_side"
        android:contentDescription="@string/buttonNewCompound"
        android:src="@drawable/ic_add_black_24dp"
        android:textSize="25sp"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/search_compound_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_size"
        android:layout_marginEnd="@dimen/grid_margin_side"
        android:layout_marginBottom="@dimen/grid_margin_side"
        android:background="@drawable/search_button"
        android:contentDescription="@string/button_search_description"
        android:drawableStart="@drawable/ic_search_white_24dp"
        android:elevation="@dimen/button_search_elevation"
        android:inputType="textAutoComplete"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textCursorDrawable="@null"
        android:textSize="25sp"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/exit_search_button"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:background="@color/transparent"
        android:contentDescription="@string/exit_search_description"
        android:elevation="@dimen/button_above_search_elevation"
        android:src="@drawable/ic_clear_white_24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/search_compound_button"
        app:layout_constraintEnd_toEndOf="@+id/search_compound_button" />

</androidx.constraintlayout.widget.ConstraintLayout>