<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".solution.view.EditActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight=".5"
        android:orientation="vertical">

        <ListView
            android:id="@+id/componentsTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:ems="10"
            android:text="" />

        <RelativeLayout
            android:id="@+id/beakerRectangle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:clickable="true">

            <ImageView
                android:id="@+id/beaker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/fromEditToPreparebutton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/beakerDescription"
                android:src="@drawable/beaker" />

            <ViewSwitcher
                android:id="@+id/volumeViewSwitcher"
                android:layout_width="121dp"
                android:layout_height="46dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="96dp"
                android:layout_marginRight="96dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <EditText
                        android:id="@+id/beakerVolumeEditText"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_toLeftOf="@+id/textView"
                        android:layout_toStartOf="@+id/textView"
                        android:focusableInTouchMode="true"
                        android:gravity="end"
                        android:inputType="numberDecimal"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center_vertical"
                        android:text="@string/mililiters"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/beakerVolumeTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="end"
                    android:text="@string/volumeText"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#85D3FA"
                    android:textSize="30sp" />

            </ViewSwitcher>

            <Button
                android:id="@+id/fromEditToPreparebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:text="@string/FromEditToPrepButtonText" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>

