<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_compound_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <com.labwhisper.biotech.finaldilution.compound.view.AddComponentButtonView
        android:id="@+id/compoundsListHeader"
        style="@style/FinalDilutionH1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/buttonNewCompound"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/new_compound_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/new_compound_title"
        style="@style/FinalDilutionH1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/grey1"
        android:gravity="center"
        android:text="@string/title_add_new_compound"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/transparent_window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compoundsListHeader" />

    <View
        android:id="@+id/transparent_window"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/all_texts_wrapped"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_compound_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/all_texts_wrapped"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transparent_window">

        <TextView
            android:id="@+id/textViewTrivialName"
            style="@style/FinalDilutionCompound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin_side"
            android:layout_marginEnd="8dp"
            android:text="@string/trivial_name"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTrivialName"
            app:layout_constraintEnd_toStartOf="@+id/editTextTrivialName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTrivialName" />

        <TextView
            android:id="@+id/textViewMolarMass"
            style="@style/FinalDilutionCompound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin_side"
            android:layout_marginEnd="8dp"
            android:text="@string/molar_mass"
            app:layout_constraintBottom_toBottomOf="@+id/editTextMolarMass"
            app:layout_constraintEnd_toStartOf="@+id/editTextMolarMass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextMolarMass" />

        <TextView
            android:id="@+id/textViewIupac"
            style="@style/FinalDilutionCompound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin_side"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            android:text="@string/iupac_name"
            app:layout_constraintBottom_toBottomOf="@+id/editTextIupac"
            app:layout_constraintEnd_toStartOf="@+id/editTextIupac"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextIupac" />

        <TextView
            android:id="@+id/textViewFormula"
            style="@style/FinalDilutionCompound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin_side"
            android:layout_marginEnd="8dp"
            android:text="@string/chemical_formula"
            app:layout_constraintBottom_toBottomOf="@+id/editTextFormula"
            app:layout_constraintEnd_toStartOf="@+id/editTextFormula"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextFormula" />

        <EditText
            android:id="@+id/editTextTrivialName"
            style="@style/FinalDilutionCompound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/grid_margin_side"
            android:ems="8"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/editTextMolarMass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextMolarMass"
            style="@style/FinalDilutionCompound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/grid_margin_side"
            android:ems="8"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTrivialName" />

        <EditText
            android:id="@+id/editTextIupac"
            style="@style/FinalDilutionCompound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_margin_side"
            android:ems="8"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/editTextFormula"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextFormula"
            style="@style/FinalDilutionCompound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_margin_side"
            android:layout_marginBottom="32dp"
            android:ems="8"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/button_new_compound_done"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/button_new_compound_done"
            style="@style/FinalDilutionButton"
            android:layout_marginEnd="@dimen/grid_margin_side"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/new_compound_proceed"
            android:src="@drawable/ic_check_black_24dp"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/button_new_compound_cancel"
            style="@style/FinalDilutionButton"
            android:layout_marginStart="@dimen/grid_margin_side"
            android:contentDescription="@string/new_compound_back"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/button_new_compound_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_new_compound_done" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>